<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dni_nie_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/dni_nie"
            android:background="@drawable/login_edittext"
            android:layout_marginBottom="5dp"
            android:inputType="text|textCapCharacters"
            android:maxLength="9"/>

        <ImageView
            android:id="@+id/info_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_info"
            android:layout_below="@id/dni_nie_et" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni_nie_example"
            android:layout_toRightOf="@+id/info_iv"
            android:layout_below="@id/dni_nie_et"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/telephone"
        android:background="@drawable/login_edittext"
        android:layout_marginBottom="10dp"
        android:inputType="phone"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/address_et"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/address"
        android:gravity="top"
        android:background="@drawable/login_edittext"
        android:layout_marginBottom="10dp"
        android:maxLength="150"
        android:inputType="text|textCapSentences"/>

    <EditText
        android:id="@+id/postal_code_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/postal_code"
        android:background="@drawable/login_edittext"
        android:layout_marginBottom="20dp"
        android:inputType="number"
        android:maxLength="5"/>


    <Button
        android:id="@+id/end_b"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:background="@drawable/login_button"
        android:onClick="onSaveClick"
        android:text="@string/end"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>