<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jordi.fitplus.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo_fitplus_center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <EditText
            android:id="@+id/identifier_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/login_b"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:onClick="onLoginClick"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/login_button"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:onClick="onForgotPassword"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/create_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:onClick="onCreateUserClick"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
